@@ -608,11 +608,11 @@ void auth_end_getall()
 char *vauth_munch_domain( char *domain )
 {
   int i;
-  static char tmpbuf[50];
+  static char tmpbuf[512];
 
   if ( domain == NULL || domain[0] == 0 ) return(domain);
 
-  for(i=0;domain[i]!=0;++i){
+  for(i=0;domain[i]!=0 && i < (sizeof(tmpbuf) - 1);++i){
     tmpbuf[i] = tolower(domain[i]);
     if ( domain[i] == '.' || domain[i] == '-' ) {
       tmpbuf[i] = SQL_DOT_CHAR;
